<resources>
    <string name="app_name">Doutor Rio</string>
    <string name="app_close_message">Pressione novamente para encerrar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Map Fragment -->
    <string name="map_title">Mapa</string>
    <string name="map_go_to" formatted="false">{fa_map_signs} Traçar rota</string>
    <string name="map_request_uber" formatted="false">{fa_taxi} Chamar Uber</string>
    <string name="map_centralize" formatted="false">{fa_map_marker} Centralizar</string>
    <array name="centralize_drop_down_options">
        <item>Mais próximo</item>
        <item>{dropdown_separator}</item>
        <item>Última escolha</item>
    </array>

    <!-- List Fragment -->
    <string name="list_title">Todas as opções</string>
    <string name="list_type_public">Público</string>
    <string name="list_type_private">Privado</string>

    <!-- PopUps -->
    <string name="popup_gps_off_title">O GPS está desligado!</string>
    <string name="popup_gps_off_text">Para usar o aplicativo, você deve ligar o GPS.</string>
    <string name="popup_gps_off_positive_button">Ligar o GPS</string>
    <string name="popup_about_title">Doutor Rio</string>
    <string name="popup_about_text" formatted="false">Versão %s</string>
    <string name="popup_about_positive_button">Ok!</string>

    <!-- Permission Group -->
    <string name="permission_group_location_label">Localização necessária</string>
    <string name="permission_group_location_description">Para usar o Doutor Rio, é necessário que você conceda permissões para acessarmos o GPS do seu celular.</string>

    <!-- Menu -->
    <string name="menu_hospital">Hospital Geral</string>
    <string name="menu_secretaria_saude">Secretaria de Saúde</string>
    <string name="menu_policlina">Policlínica</string>
    <string name="menu_unidade_movel">Unidade Móvel</string>
    <string name="menu_home_care">Home Care</string>
    <string name="menu_central_orgaos">Central de Órgãos</string>
    <string name="menu_posto_saude">Posto de Saúde</string>
    <string name="menu_laboratorio">Laboratório</string>
    <string name="menu_parto">Casa de Parto</string>
    <string name="menu_telesaude">Telesaúde</string>
    <string name="menu_hemoterapia">Hemoterapia</string>
    <string name="menu_psicosocial">Centro Psicosocial</string>

    <!-- About -->
    <string name="action_settings">Sobre</string>
</resources>
